--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
+    "vaul": "^0.9.1"
   },
   "devDependencies": {
     "@types/node": "^20",
